# visiondistill

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
visiondistill/: __init__.py  cli.py  config.py  pipeline.py
visiondistill/data/: __init__.py  annotator.py  coco_export.py  converter.py  dataset.py  segformer_dataset.py
visiondistill/students/: __init__.py  base.py  segformer.py  yolo.py
visiondistill/teachers/: __init__.py  base.py  grounding_dino.py  sam2.py  sam3.py
visiondistill/utils/: __init__.py  device.py  io.py
